test/scc/expr/semantic-errors/127.t
void test()
{
    const int* a;
    int* b = { a };
}